syntax = "proto3";

// 指定golang包名
option go_package = "/user_proto";

service UserService {
  rpc UserLogin (UserLoginRequest) returns (UserLoginResponse);
}

message UserLoginRequest {
  string user_name = 1;
  string password  = 2;
  string phone     = 3;
  string code      = 4;
}


message UserLoginResponse {
  string access_token  = 1;
  string refresh_token = 2;
  int32  code          = 3;
  string message       = 4;
}



// protoc -I .\grpc_proto --go_out=plugins=grpc:.\user_proto .\grpc_proto\user.proto